--- a/server/pom.xml
+++ b/server/pom.xml
@@ -26,11 +26,14 @@
             <artifactId>bluecove</artifactId>
             <version>2.1.0</version>
         </dependency>
+        <!--
         <dependency>
             <groupId>net.sf.bluecove</groupId>
             <artifactId>bluecove_linux</artifactId>
             <version>2.1.0</version>
+            <scope>runtime</scope>
         </dependency>
+        -->
         <dependency>
             <groupId>com.smartphone-thermostat.common</groupId>
             <artifactId>common</artifactId>
