Use SensorTag in default config

--- a/server/conf/zones/bedroom.properties
+++ b/server/conf/zones/bedroom.properties
@@ -5,5 +5,6 @@ actuator.type = GPIO_RELAY
 # ID of actuator output (GPIO pin number on the Raspberry pi)
 actuator.id = 11
 
-# ID of the temperature sensor (1-wire sensor ID)
-sensor.id = 10-0008026ebccb
+# Temperature sensor
+sensor.type = TI_SENSORTAG
+sensor.id = 34:B1:F7:D4:FD:81
