--- a/server/conf/zones/livingroom.properties
+++ b/server/conf/zones/livingroom.properties
@@ -5,5 +5,6 @@ actuator.type = GPIO_RELAY
 # ID of actuator output (GPIO pin number on the Raspberry pi)
 actuator.id = 9
 
-# ID of the temperature sensor (1-wire sensor ID)
+# Temperature sensor
 sensor.id = 10-00080274bfd8
+sensor.type = W1_THERM
